Fix overlays group after collapsing and add non-expanded class

--- a/src/app/preview/preview/preview.component.css
+++ b/src/app/preview/preview/preview.component.css
@@ -38,6 +38,11 @@
     margin: 10px 0;
 }
 
+
+.group .flex-item.non-expanded {
+    border: 2px solid rgba(156, 156, 156, 0.35);
+}
+
 .flex-item.group {
     display: flex;
     flex-direction: column;
